# weight-recorder

./: .gitignore  CHANGELOG.md  stack.yaml  weight-recorder.cabal
src/Entity/: User.hs
src/Model/: User.hs
src/Web/: Core.hs
src/Web/Action/: Login.hs  NewRecord.hs
